; ModuleID = '/home/carl/AnghaBench/lab/engine/code/client/extr_libmumblelink.c_mumble_set_description.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/client/extr_libmumblelink.c_mumble_set_description.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@lm = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mumble_set_description(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @lm, align 8
  %5 = icmp ne %struct.TYPE_2__* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %18

7:                                                ; preds = %1
  %8 = load i8*, i8** %2, align 8
  %9 = call i64 @strlen(i8* %8)
  %10 = add nsw i64 %9, 1
  %11 = call i64 @MIN(i32 1, i64 %10)
  store i64 %11, i64* %3, align 8
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @lm, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i8*, i8** %2, align 8
  %16 = load i64, i64* %3, align 8
  %17 = call i32 @mbstowcs(i32 %14, i8* %15, i64 %16)
  br label %18

18:                                               ; preds = %7, %6
  ret void
}

declare dso_local i64 @MIN(i32, i64) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @mbstowcs(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
